# hakari

./: .gitignore  Cargo.toml  ascii.txt
src/: app.rs  config.rs  copilot.rs  dialog.rs  events.rs  gemini.rs  main.rs  state.rs  theme.rs  types.rs  ui.rs
src/agent/: context.rs  llm.rs  llm_copilot.rs  llm_gemini.rs  loop_detect.rs  mod.rs  nano.rs  shizuka.rs  tools.rs
src/auth/: copilot.rs
src/llm/: client.rs  messages.rs  mod.rs  tool_schema.rs
src/llm/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/memory/: improvement.rs  kkm.rs  kms.rs  kpms.rs  mod.rs
src/nano/: agent.rs  context_builder.rs  mod.rs  swarm.rs  system_prompt.rs
src/project/: detector.rs  file_tree.rs  mod.rs  parser.rs
src/shizuka/: context_controller.rs  escalation.rs  interceptor.rs  loop_detector.rs  mod.rs  preparation.rs  scope_enforcer.rs  validation_engine.rs
src/tools/: execute.rs  grep.rs  mod.rs  read.rs  summon.rs  web_search.rs  write.rs
src/tui/: commands.rs  event.rs  layout.rs  mod.rs  terminal.rs  theme.rs
src/tui/widgets/: header.rs  input_bar.rs  message_list.rs  mod.rs  popup.rs  progress.rs  status_bar.rs  tool_result.rs
src/ui/: helpers.rs  input.rs  layout.rs  messages.rs  mod.rs  wrapping.rs
src/ui/layout/: mod.rs  renderer.rs
