[package]
name = "hakari"
version = "0.1.0"
edition = "2021"
description = "HAKARI — Harness for Agents, Keeping Agents Reasonably Iterate"
license = "MIT"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP / LLM
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Parsing / Code analysis
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

# Diff
similar = "2"

# Syntax highlighting
syntect = "5"

# Clipboard
arboard = "3"

# CLI
clap = { version = "4", features = ["derive"] }

# Directories
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
ignore = "0.4"
sha2 = "0.10"
regex = "1"

[profile.release]
opt-level = 3
lto = true
