[package]
name = "hakari"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dirs = "5"
sha2 = "0.10"
toml = "0.8"
ignore = "0.4"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
